[MULTI-24] remove market type
