# indexer/packages/postgres/src/models/perpetual-market-model.ts
@@ -8,7 +8,7 @@ import {
   NumericPattern,
 } from '../lib/validators';
 import {
-  PerpetualMarketStatus, PerpetualMarketType,
+  PerpetualMarketStatus,
 } from '../types';
 
 export default class PerpetualMarketModel extends Model {
@@ -68,7 +68,6 @@ export default class PerpetualMarketModel extends Model {
         'subticksPerTick',
         'stepBaseQuantums',
         'liquidityTierId',
-        'marketType',
       ],
       properties: {
         id: { type: 'string', pattern: IntegerPattern },
@@ -88,7 +87,6 @@ export default class PerpetualMarketModel extends Model {
         subticksPerTick: { type: 'integer' },
         stepBaseQuantums: { type: 'integer' },
         liquidityTierId: { type: 'integer' },
-        marketType: { type: 'string' },
         baseOpenInterest: { type: 'string', pattern: NumericPattern },
       },
     };
@@ -119,7 +117,6 @@ export default class PerpetualMarketModel extends Model {
       subticksPerTick: 'integer',
       stepBaseQuantums: 'integer',
       liquidityTierId: 'integer',
-      marketType: 'string',
       baseOpenInterest: 'string',
     };
   }
@@ -157,8 +154,6 @@ export default class PerpetualMarketModel extends Model {
   stepBaseQuantums!: number;
 
   liquidityTierId!: number;
-
-  marketType!: PerpetualMarketType;
 
   baseOpenInterest!: string;
 }
