# indexer/packages/postgres/src/types/db-model-types.ts
@@ -6,7 +6,7 @@ import { FillType, Liquidity } from './fill-types';
 import {
   OrderSide, OrderStatus, OrderType, TimeInForce,
 } from './order-types';
-import { PerpetualMarketStatus, PerpetualMarketType } from './perpetual-market-types';
+import { PerpetualMarketStatus } from './perpetual-market-types';
 import { PerpetualPositionStatus } from './perpetual-position-types';
 import { PositionSide } from './position-types';
 
@@ -90,7 +90,6 @@ export interface PerpetualMarketFromDatabase {
   subticksPerTick: number;
   stepBaseQuantums: number;
   liquidityTierId: number;
-  marketType: PerpetualMarketType;
   baseOpenInterest: string;
 }
 
