# indexer/services/comlink/src/controllers/api/v4/fills-controller.ts
@@ -36,8 +36,7 @@ import {
   FillRequest,
   FillResponse,
   FillResponseObject,
-  MarketAndTypeByClobPairId,
-  MarketType,
+  MarketByClobPairId,
   ParentSubaccountFillRequest,
 } from '../../../types';
 
@@ -51,7 +50,6 @@ class FillsController extends Controller {
     @Query() address: string,
       @Query() subaccountNumber: number,
       @Query() market?: string,
-      @Query() marketType?: MarketType,
       @Query() limit?: number,
       @Query() createdBeforeOrAtHeight?: number,
       @Query() createdBeforeOrAt?: IsoString,
@@ -59,11 +57,11 @@ class FillsController extends Controller {
     // TODO(DEC-656): Change to using a cache of markets in Redis similar to Librarian instead of
     // querying the DB.
     let clobPairId: string | undefined;
-    if (isDefined(market) && isDefined(marketType)) {
-      clobPairId = await getClobPairId(market!, marketType!);
+    if (isDefined(market)) {
+      clobPairId = await getClobPairId(market!);
 
       if (clobPairId === undefined) {
-        throw new NotFoundError(`${market} not found in markets of type ${marketType}`);
+        throw new NotFoundError(`${market} not found`);
       }
     }
 
@@ -88,7 +86,6 @@ class FillsController extends Controller {
       clobPairIdToPerpetualMarket,
       (perpetualMarket: PerpetualMarketFromDatabase) => {
         return {
-          marketType: MarketType.PERPETUAL,
           market: perpetualMarket.ticker,
         };
       },
@@ -106,7 +103,6 @@ class FillsController extends Controller {
     @Query() address: string,
       @Query() parentSubaccountNumber: number,
       @Query() market?: string,
-      @Query() marketType?: MarketType,
       @Query() limit?: number,
       @Query() createdBeforeOrAtHeight?: number,
       @Query() createdBeforeOrAt?: IsoString,
@@ -114,11 +110,11 @@ class FillsController extends Controller {
     // TODO(DEC-656): Change to using a cache of markets in Redis similar to Librarian instead of
     // querying the DB.
     let clobPairId: string | undefined;
-    if (isDefined(market) && isDefined(marketType)) {
-      clobPairId = await getClobPairId(market!, marketType!);
+    if (isDefined(market)) {
+      clobPairId = await getClobPairId(market!);
 
       if (clobPairId === undefined) {
-        throw new NotFoundError(`${market} not found in markets of type ${marketType}`);
+        throw new NotFoundError(`${market} not found`);
       }
     }
 
@@ -152,7 +148,6 @@ class FillsController extends Controller {
       clobPairIdToPerpetualMarket,
       (perpetualMarket: PerpetualMarketFromDatabase) => {
         return {
-          marketType: MarketType.PERPETUAL,
           market: perpetualMarket.ticker,
         };
       },
@@ -173,27 +168,13 @@ router.get(
   rateLimiterMiddleware(getReqRateLimiter),
   ...CheckSubaccountSchema,
   ...CheckLimitAndCreatedBeforeOrAtSchema,
-  // Use conditional validations such that market is required if marketType is in the query
   // parameters and vice-versa.
   // Reference https://express-validator.github.io/docs/validation-chain-api.html#ifcondition
-  query('market').if(query('marketType').exists()).notEmpty()
-    .withMessage('market must be provided if marketType is provided'),
-  query('marketType').if(query('market').exists()).notEmpty()
-    .withMessage('marketType must be provided if market is provided'),
-  // TODO(DEC-656): Validate market/marketType against cached markets.
   ...checkSchema({
     market: {
       in: ['query'],
       isString: true,
       optional: true,
-    },
-    marketType: {
-      in: ['query'],
-      isIn: {
-        options: [Object.values(MarketType)],
-      },
-      optional: true,
-      errorMessage: 'marketType must be a valid market type (PERPETUAL/SPOT)',
     },
   }),
   handleValidationErrors,
@@ -205,7 +186,6 @@ router.get(
       address,
       subaccountNumber,
       market,
-      marketType,
       limit,
       createdBeforeOrAtHeight,
       createdBeforeOrAt,
@@ -222,7 +202,6 @@ router.get(
         address,
         subaccountNum,
         market,
-        marketType,
         limit,
         createdBeforeOrAtHeight,
         createdBeforeOrAt,
@@ -251,27 +230,13 @@ router.get(
   rateLimiterMiddleware(getReqRateLimiter),
   ...CheckParentSubaccountSchema,
   ...CheckLimitAndCreatedBeforeOrAtSchema,
-  // Use conditional validations such that market is required if marketType is in the query
   // parameters and vice-versa.
   // Reference https://express-validator.github.io/docs/validation-chain-api.html#ifcondition
-  query('market').if(query('marketType').exists()).notEmpty()
-    .withMessage('market must be provided if marketType is provided'),
-  query('marketType').if(query('market').exists()).notEmpty()
-    .withMessage('marketType must be provided if market is provided'),
-  // TODO(DEC-656): Validate market/marketType against cached markets.
   ...checkSchema({
     market: {
       in: ['query'],
       isString: true,
       optional: true,
-    },
-    marketType: {
-      in: ['query'],
-      isIn: {
-        options: [Object.values(MarketType)],
-      },
-      optional: true,
-      errorMessage: 'marketType must be a valid market type (PERPETUAL/SPOT)',
     },
   }),
   handleValidationErrors,
@@ -283,7 +248,6 @@ router.get(
       address,
       parentSubaccountNumber,
       market,
-      marketType,
       limit,
       createdBeforeOrAtHeight,
       createdBeforeOrAt,
@@ -300,7 +264,6 @@ router.get(
         address,
         parentSubaccountNum,
         market,
-        marketType,
         limit,
         createdBeforeOrAtHeight,
         createdBeforeOrAt,
